--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
         <meta charset="utf-8">
         <title>RoboDev Build Configuration</title>
         <script src="jsoneditor.js"></script>
+        <script src="jsondiffpatch-full.js"></script>
+        <script src="jsondiffpatch-formatters.js"></script>
+        <link rel="stylesheet" href="jsondiffpatch-html.css" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
         <h1>RoboDev Build Configuration</h1>
 
         <div id="editor_holder"></div>
-        <button id="submit">Submit (console.log)</button>
+        <button id="save">Save</button>
+
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Confirm Changes</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div id="visual-diff"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script>
             // Initialize the editor with a JSON schema
@@ -27,10 +49,12 @@
                     disable_edit_json: true,
                     theme: "bootstrap3"
                 });
-                // Hook up the submit button to log to the console
-                document.getElementById('submit').addEventListener('click',function() {
-                    // Get the value from the editor
-                    console.log(editor.getValue());
+
+                document.getElementById('save').addEventListener('click',function() {
+                    var delta = jsondiffpatch.diff(config, editor.getValue());
+                    document.getElementById('visual-diff').innerHTML = jsondiffpatch.formatters.html.format(delta, config);
+
+                    $('#myModal').modal()
                 });
             });
         </script>
