--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
+        <script src="http://spin.js.org/spin.min.js"></script>
+        <script src="spin.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -44,6 +46,9 @@
         <script>
             $(document).ready(function() {
                 $("#authenticate").on("click", function() {
+                    $.spin(true);
+                    $('#authenticate').prop('disabled', true);
+
                     var gh = new GitHub({ token: $("#password").val() });
                     var repo = gh.getRepo("interstateone", "RoboDev");
 
@@ -52,6 +57,8 @@
                         repo.getContents("master", "schema.json", true)
                     ])
                     .then(function([{data}, {data: schema}]) {
+                        $.spin(false);
+
                         schema.properties.projects.confirmDelete = function() { return window.confirm("Are you sure?") }
 
                         var editor = new JSONEditor(document.getElementById('editor_holder'),{
@@ -70,10 +77,14 @@
                         });
 
                         $("#commit").on("click", function() {
-                            repo.writeFile("master", "JenkinsConfig.json", JSON.stringify(editor.getValue(), null, 4), "Update build config", { encode: true })
+                            $.spin(true);
+                            repo.writeFile("master", "JenkinsConfig.json", JSON.stringify(editor.getValue(), null, 4), "Update build config", { encode: true }).then(result => $.spin(false));
                         });
-                    })
-                    .catch(error => console.log(error));
+                    }, function(error) {
+                        $.spin(false);
+                        $('#authenticate').prop('disabled', false);
+                        console.log(error);
+                    });
                 });
             });
         </script>
