Serve up static site with Gatekeeper for safe client github auth
See https://github.com/prose/gatekeeper

--- a/static/index.html
+++ b/static/index.html
@@ -2,16 +2,16 @@
     <head>
         <meta charset="utf-8">
         <title>RoboDev Build Configuration</title>
-        <script src="jsoneditor.js"></script>
-        <script src="jsondiffpatch-full.js"></script>
-        <script src="jsondiffpatch-formatters.js"></script>
+        <script src="js/jsoneditor.js"></script>
+        <script src="js/jsondiffpatch-full.js"></script>
+        <script src="js/jsondiffpatch-formatters.js"></script>
         <script src="https://unpkg.com/github-api/dist/GitHub.bundle.min.js"></script>
-        <link rel="stylesheet" href="jsondiffpatch-html.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/jsondiffpatch-html.css" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
         <script src="http://spin.js.org/spin.min.js"></script>
-        <script src="spin.js"></script>
+        <script src="js/spin.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
     <body>
